library/general/storageclass/samples/storageclass/example_allowed_ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: volumeclaimstorageclass
spec:
  selector:
    matchLabels:
      app: volumeclaimstorageclass
  serviceName: volumeclaimstorageclass
  replicas: 1
  template:
    metadata:
      labels:
        app: volumeclaimstorageclass
    spec:
      containers:
      - name: main
        image: k8s.gcr.io/nginx-slim:0.8
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "somestorageclass"
      resources:
        requests:
          storage: 1Gi
